--- a/style.css
+++ b/style.css
@@ -1,19 +1,41 @@
 body
+ {
+ background-color:#a9f04b;
+ }
+  h1 {
+ font-family: 'Special Elite', fantasy; color:rgb(38, 0, 255);
+  background-color: cornsilk;
+ }
+ #sketch_name
 {
-    background-color: lightgreen;
+ color:red; }
+  #show_sketch
+  {
+ float:right; 
 }
-
-#score{
-font-size: 25px;
-margin-left: 20px;
+ canvas
+{
+border:5px solid white;
+ border-radius:20px;
+  margin-top:150px;
+   box-shadow:5px 5px 5px grey;
+    box-shadow: 1px 1px 38px #ffffff; animation-name: example;
+ animation-duration: 4s;
+  animation-iteration-count: infinite;
 }
-
-#timer{
-    font-size: 25px;
+ @keyframes example 
+ { from {box-shadow: 1px 1px 38px grey;} to {box-shadow: 1px 1px 38px white;} }
+p, span 
+{
+ padding-top:10px;
+ font-family: 'Special Elite', fantasy; font-size:25px; 
+}
+#score {
+     font-size:35px;
+      margin-left: 20px;
+}
+ #timer {
+    font-size:35px;
     float: right;
-    margin-right: 20px;
-}
-
-#next_sketch{
-    color: darkblue;
-}
+     margin-right: 20px; 
+    }
